Agrega seguridades
