# src/main/java/com/healthcare/apps/patient/management/security/data/entities/UsuarioEntity.java
@@ -1,0 +1,39 @@
+package com.healthcare.apps.patient.management.security.data.entities;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.Table;
+import lombok.Data;
+
+import java.util.HashSet;
+import java.util.Set;
+
+@Data
+@Entity
+@Table(name = "seg_usuario")
+public class UsuarioEntity {
+
+	@Id
+	@GeneratedValue(strategy = GenerationType.IDENTITY)
+	private Integer id;
+
+	private String username;
+
+	private String password;
+
+	private String name;
+
+	@ManyToMany(fetch = FetchType.EAGER)
+	@JoinTable(
+			name = "seg_usuario_rol",
+			joinColumns = @JoinColumn(name = "usuario_id"),
+			inverseJoinColumns = @JoinColumn(name = "rol_id")
+	)
+	private Set<RolEntity> roles = new HashSet<>();
+}
