# src/main/resources/META-INF/openapi.yaml
@@ -12,6 +12,9 @@ tags:
     description: Operaciones relacionadas con citas médicas
   - name: Calendarizaciones
     description: Operaciones relacionadas con calendarizaciones médicas
+  - name: Autenticación
+    description: Operaciones relacionadas con la Seguridad
+
 paths:
   /patients:
     post:
@@ -272,7 +275,38 @@ paths:
         '500':
           description: Error interno del servidor
 
+  /auth/login:
+    post:
+      tags:
+        - Autenticación
+      summary: Iniciar sesión.
+      operationId: authLogin
+      description: Autenticacion en sistema
+      security: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AuthRequest'
+      responses:
+        '200':
+          description: Login exitoso
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        '403':
+          description: No autorizado para acceder a este recurso
+        '500':
+          description: Error al autenticarse
+
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     PatientResponse:
       type: object
@@ -509,3 +543,22 @@ components:
           format: date-time
           description: Fecha y hora del horario
           example: "2024-01-15T14:30:00"
+
+    AuthRequest:
+      type: object
+      required:
+        - userName
+        - password
+      properties:
+        userName:
+          type: string
+        password:
+          type: string
+    AuthResponse:
+      type: object
+      properties:
+        token:
+          type: string
+
+security:
+  - bearerAuth: [ ]
